test/compile_errors/err_compiler_hook_source_emitter_only_bad_source.w
//! expect-error: return type mismatch

use std.compiler

@[compiler_hook(after_typecheck)]
fn generate(source: SourceEmitter):
    source.emit_source("fn generated_bad -> i32:\n    \"bad\"\n")

fn main:
    print("ok")
